trunk/Archive/db9db9c052356121c4297d1d85aaa99f-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:9:14: error: expected primary-expression before ‘auto’
     decltype(auto) operator()(Args&&... args) &
              ^
main.cpp:9:14: error: expected ‘)’ before ‘auto’
main.cpp:9:5: error: expected unqualified-id before ‘decltype’
     decltype(auto) operator()(Args&&... args) &
     ^
main.cpp:13:14: error: expected primary-expression before ‘auto’
     decltype(auto) operator()(Args&&... args) const&
              ^
main.cpp:13:14: error: expected ‘)’ before ‘auto’
main.cpp:13:5: error: expected unqualified-id before ‘decltype’
     decltype(auto) operator()(Args&&... args) const&
     ^
main.cpp:17:14: error: expected primary-expression before ‘auto’
     decltype(auto) operator()(Args&&... args) &&
              ^
main.cpp:17:14: error: expected ‘)’ before ‘auto’
main.cpp:17:5: error: expected unqualified-id before ‘decltype’
     decltype(auto) operator()(Args&&... args) &&
     ^
main.cpp: In function ‘int main()’:
main.cpp:27:36: error: parameter declared ‘auto’
     auto factorial = fix([](auto&& self, int n) -> int
                                    ^
main.cpp: In lambda function:
main.cpp:28:40: error: ‘self’ was not declared in this scope
     { return n < 2 ? 1 : n * self(n - 1); });
                                        ^
main.cpp: In function ‘int main()’:
main.cpp:38:23: error: no match for call to ‘(fix_type<main()::__lambda0>) (int)’
     return factorial(5);
                       ^
